--- a/Playwright/DataConfigCreateFile.json
+++ b/Playwright/DataConfigCreateFile.json
@@ -17,145 +17,138 @@
     },
     "stack": "ruberg-hr.dev.elo"
   },
-  "eloAcls": {
-    "arcPaths": []
-  },
+  "eloAcls": [],
   "eloTile": {
     "repositoryTile": "Solutions",
     "taskTile": "Aufgaben"
   },
-  "eloActions": {
-    "eloActions": [
-      {
-        "entryPath": "",
-        "formulaType": "EXTERNAL",
-        "formulaSaveButton": "OK",
-        "formulaCancelButton": "Abbrechen",
-        "selectionDialogItem": "",
-        "eloActionDef": {
-          "selectorRibbon": "Neu",
-          "selectorMenu": "Personal",
-          "selectorButton": "Neuer Mitarbeiter"
-        },
-        "tabPages": [
-          {
-            "tabName": "",
-            "initTabPage": [],
-            "controls": [
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_FIRSTNAME",
-                "value": "Hans",
-                "type": "TEXT"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_LASTNAME",
-                "value": "Hansen",
-                "type": "TEXT"
-              }
-            ],
-            "tables": [],
-            "checkValueControls": [],
-            "selectDocumentDialogs": []
-          }
-        ],
-        "testShouldFail": false
+  "eloActions": [
+    {
+      "entryPath": "",
+      "formulaType": "EXTERNAL",
+      "formulaSaveButton": "OK",
+      "formulaCancelButton": "Abbrechen",
+      "selectionDialogItem": "",
+      "eloActionDef": {
+        "selectorRibbon": "Neu",
+        "selectorMenu": "Personal",
+        "selectorButton": "Neuer Mitarbeiter"
       },
-      {
-        "entryPath": "",
-        "formulaType": "VIEWER",
-        "formulaSaveButton": "Speichern",
-        "formulaCancelButton": "",
-        "selectionDialogItem": "",
-        "eloActionDef": {
-          "selectorRibbon": "",
-          "selectorMenu": "",
-          "selectorButton": ""
-        },
-        "tabPages": [
-          {
-            "tabName": "Personal",
-            "initTabPage": [],
-            "controls": [],
-            "tables": [],
-            "checkValueControls": [
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_PERSONNELSTATUS",
-                "value": "O - In Vorbereitung",
-                "type": "KWL",
-                "operator": "EQUAL"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_PERSONNELNO",
-                "value": "",
-                "type": "TEXT",
-                "operator": "EXIST"
-              }
-            ],
-            "selectDocumentDialogs": []
-          }
-        ],
-        "testShouldFail": false
+      "tabPages": [
+        {
+          "tabName": "",
+          "initTabPage": [],
+          "controls": [
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_FIRSTNAME",
+              "value": "Hans",
+              "type": "TEXT"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_LASTNAME",
+              "value": "Hansen",
+              "type": "TEXT"
+            }
+          ],
+          "tables": [],
+          "checkValueControls": [],
+          "selectDocumentDialogs": []
+        }
+      ],
+      "testShouldFail": false,
+      "selectedButton": "SAVE"
+    },
+    {
+      "entryPath": "",
+      "formulaType": "VIEWER",
+      "formulaSaveButton": "Speichern",
+      "formulaCancelButton": "",
+      "selectionDialogItem": "",
+      "eloActionDef": {
+        "selectorRibbon": "",
+        "selectorMenu": "",
+        "selectorButton": ""
       },
-      {
-        "entryPath": "",
-        "formulaType": "VIEWER",
-        "formulaSaveButton": "Speichern",
-        "formulaCancelButton": "",
-        "selectionDialogItem": "",
-        "eloActionDef": {
-          "selectorRibbon": "",
-          "selectorMenu": "",
-          "selectorButton": ""
+      "tabPages": [
+        {
+          "tabName": "Personal",
+          "initTabPage": [],
+          "controls": [],
+          "tables": [],
+          "checkValueControls": [
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_PERSONNELSTATUS",
+              "value": "O - In Vorbereitung",
+              "type": "KWL",
+              "operator": "EQUAL"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_PERSONNELNO",
+              "value": "",
+              "type": "TEXT",
+              "operator": "EXIST"
+            }
+          ],
+          "selectDocumentDialogs": []
+        }
+      ],
+      "testShouldFail": false,
+      "selectedButton": "SAVE"
+    },
+    {
+      "entryPath": "",
+      "formulaType": "VIEWER",
+      "formulaSaveButton": "Speichern",
+      "formulaCancelButton": "",
+      "selectionDialogItem": "",
+      "eloActionDef": {
+        "selectorRibbon": "",
+        "selectorMenu": "",
+        "selectorButton": ""
+      },
+      "tabPages": [
+        {
+          "tabName": "Personal",
+          "initTabPage": [],
+          "controls": [
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_WORKSCHEDULE",
+              "value": "Teilzeit",
+              "type": "KWL"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_LICENSEPLATE",
+              "value": "S-AA 1234",
+              "type": "TEXT"
+            }
+          ],
+          "tables": [],
+          "checkValueControls": [],
+          "selectDocumentDialogs": []
         },
-        "tabPages": [
-          {
-            "tabName": "Personal",
-            "initTabPage": [],
-            "controls": [
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_WORKSCHEDULE",
-                "value": "Teilzeit",
-                "type": "KWL"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_LICENSEPLATE",
-                "value": "S-AA 1234",
-                "type": "TEXT"
-              }
-            ],
-            "tables": [],
-            "checkValueControls": [],
-            "selectDocumentDialogs": []
-          },
-          {
-            "tabName": "Persönlich",
-            "initTabPage": [],
-            "controls": [
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_BIRTHDAY",
-                "value": "25.03.1960",
-                "type": "TEXT"
-              }
-            ],
-            "tables": [],
-            "checkValueControls": [],
-            "selectDocumentDialogs": []
-          }
-        ],
-        "testShouldFail": false
-      }
-    ]
-  },
-  "eloTasks": {
-    "eloTasks": []
-  },
-  "eloDeletes": {
-    "arcPaths": []
-  },
+        {
+          "tabName": "Persönlich",
+          "initTabPage": [],
+          "controls": [
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_BIRTHDAY",
+              "value": "25.03.1960",
+              "type": "TEXT"
+            }
+          ],
+          "tables": [],
+          "checkValueControls": [],
+          "selectDocumentDialogs": []
+        }
+      ],
+      "testShouldFail": false,
+      "selectedButton": "SAVE"
+    }
+  ],
+  "eloTasks": [],
+  "eloDeletes": [],
   "eloForwardWorkflow": {
     "toNodesName": []
   },
-  "eloRfs": {
-    "eloRfs": []
-  }
+  "eloRfs": []
 }
