--- a/Playwright/DataConfigDeleteData.json
+++ b/Playwright/DataConfigDeleteData.json
@@ -17,34 +17,24 @@
     },
     "stack": "ruberg-hr.dev.elo"
   },
-  "eloAcls": {
-    "arcPaths": []
-  },
+  "eloAcls": [],
   "eloTile": {
     "repositoryTile": "Solutions",
     "taskTile": "Aufgaben"
   },
-  "eloActions": {
-    "eloActions": []
-  },
-  "eloTasks": {
-    "eloTasks": []
-  },
-  "eloDeletes": {
-    "arcPaths": [
-      "ARCPATH:/Personalmanagement/Personalakten/H/Hansen, Hans",
-      "ARCPATH:/Personalmanagement/Personalakten/L/Leutheusser-Schnarrenberger, Geneviève-Gabrielle",
-      "ARCPATH:/Personalmanagement/Personalakten/B/Buhl, Karl-Theodor Maria Nikolaus Johann Jacob Philipp Franz Joseph",
-      "ARCPATH:/Personalmanagement/Personalakten/B/Bärenfänger, Adoración",
-      "ARCPATH:/Personalmanagement/Personalakten/M/Montaña Lucena, Françoise Andrés Evaristo",
-      "ARCPATH:/Personalmanagement/Personalakten/S/Stephan, Annaëlle",
-      "ARCPATH:/Personalmanagement/Personalakten/Ç/Çamurcuoğlu, Sançar Ömür"
-    ]
-  },
+  "eloActions": [],
+  "eloTasks": [],
+  "eloDeletes": [
+    "ARCPATH:/Personalmanagement/Personalakten/H/Hansen, Hans",
+    "ARCPATH:/Personalmanagement/Personalakten/L/Leutheusser-Schnarrenberger, Geneviève-Gabrielle",
+    "ARCPATH:/Personalmanagement/Personalakten/B/Buhl, Karl-Theodor Maria Nikolaus Johann Jacob Philipp Franz Joseph",
+    "ARCPATH:/Personalmanagement/Personalakten/B/Bärenfänger, Adoración",
+    "ARCPATH:/Personalmanagement/Personalakten/M/Montaña Lucena, Françoise Andrés Evaristo",
+    "ARCPATH:/Personalmanagement/Personalakten/S/Stephan, Annaëlle",
+    "ARCPATH:/Personalmanagement/Personalakten/Ç/Çamurcuoğlu, Sançar Ömür"
+  ],
   "eloForwardWorkflow": {
     "toNodesName": []
   },
-  "eloRfs": {
-    "eloRfs": []
-  }
+  "eloRfs": []
 }
