--- a/Playwright/DataConfigQSBSHR58.json
+++ b/Playwright/DataConfigQSBSHR58.json
@@ -17,124 +17,117 @@
     },
     "stack": "ruberg-hr.dev.elo"
   },
-  "eloAcls": {
-    "arcPaths": [
-      "ARCPATH:/Personalmanagement/Personalakten/H/Hansen, Hans"
-    ]
-  },
+  "eloAcls": [
+    "ARCPATH:/Personalmanagement/Personalakten/H/Hansen, Hans"
+  ],
   "eloTile": {
     "repositoryTile": "Solutions",
     "taskTile": "Aufgaben"
   },
-  "eloActions": {
-    "eloActions": [
-      {
-        "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans",
-        "formulaType": "EXTERNAL",
-        "formulaSaveButton": "OK",
-        "formulaCancelButton": "Abbrechen",
-        "selectionDialogItem": "",
-        "eloActionDef": {
-          "selectorRibbon": "Personal",
-          "selectorMenu": "Personal",
-          "selectorButton": "Nachricht"
-        },
-        "tabPages": [
-          {
-            "tabName": "",
-            "initTabPage": [],
-            "controls": [],
-            "tables": [],
-            "checkValueControls": [],
-            "selectDocumentDialogs": []
-          }
-        ],
-        "testShouldFail": true
+  "eloActions": [
+    {
+      "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans",
+      "formulaType": "EXTERNAL",
+      "formulaSaveButton": "OK",
+      "formulaCancelButton": "Abbrechen",
+      "selectionDialogItem": "",
+      "eloActionDef": {
+        "selectorRibbon": "Personal",
+        "selectorMenu": "Personal",
+        "selectorButton": "Nachricht"
       },
-      {
-        "entryPath": "",
-        "formulaType": "EXTERNAL",
-        "formulaSaveButton": "OK",
-        "formulaCancelButton": "Abbrechen",
-        "selectionDialogItem": "",
-        "eloActionDef": {
-          "selectorRibbon": "Personal",
-          "selectorMenu": "Personal",
-          "selectorButton": "Nachricht"
-        },
-        "tabPages": [
-          {
-            "tabName": "",
-            "initTabPage": [],
-            "controls": [
-              {
-                "selector": "IX_MAP_HR_PERSONNEL_SENDER",
-                "value": "test-business-solutions@elo.local",
-                "type": "TEXT"
-              },
-              {
-                "selector": "IX_MAP_CORRESPONDENT_RECIPIENT_NAME_1",
-                "value": "test-business-solutions@elo.local",
-                "type": "TEXT"
-              },
-              {
-                "selector": "IX_GRP_COMMUNICATION_SUBJECT",
-                "value": "Geschäftsnachricht",
-                "type": "TEXT"
-              },
-              {
-                "selector": "",
-                "value": "Inhalt Geschäftsnachricht",
-                "type": "REDACTOR"
-              }
-            ],
-            "tables": [],
-            "checkValueControls": [],
-            "selectDocumentDialogs": [
-              {
-                "startButton": "Anhang hinzufügen",
-                "documentPath": "Solutions/PDF Export/bob ipsum PDF"
-              }
-            ]
-          }
-        ],
-        "testShouldFail": false
+      "tabPages": [
+        {
+          "tabName": "",
+          "initTabPage": [],
+          "controls": [],
+          "tables": [],
+          "checkValueControls": [],
+          "selectDocumentDialogs": []
+        }
+      ],
+      "testShouldFail": true,
+      "selectedButton": "SAVE"
+    },
+    {
+      "entryPath": "",
+      "formulaType": "EXTERNAL",
+      "formulaSaveButton": "OK",
+      "formulaCancelButton": "Abbrechen",
+      "selectionDialogItem": "",
+      "eloActionDef": {
+        "selectorRibbon": "Personal",
+        "selectorMenu": "Personal",
+        "selectorButton": "Nachricht"
       },
-      {
-        "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans/Korrespondenz/Geschäftsnachricht",
-        "formulaType": "VIEWER",
-        "formulaSaveButton": "",
-        "formulaCancelButton": "",
-        "selectionDialogItem": "",
-        "eloActionDef": {
-          "selectorRibbon": "",
-          "selectorMenu": "",
-          "selectorButton": ""
-        },
-        "tabPages": [
-          {
-            "tabName": "",
-            "initTabPage": [],
-            "controls": [],
-            "tables": [],
-            "checkValueControls": [],
-            "selectDocumentDialogs": []
-          }
-        ],
-        "testShouldFail": false
-      }
-    ]
-  },
-  "eloTasks": {
-    "eloTasks": []
-  },
-  "eloDeletes": {
-    "arcPaths": []
-  },
+      "tabPages": [
+        {
+          "tabName": "",
+          "initTabPage": [],
+          "controls": [
+            {
+              "selector": "IX_MAP_HR_PERSONNEL_SENDER",
+              "value": "test-business-solutions@elo.local",
+              "type": "TEXT"
+            },
+            {
+              "selector": "IX_MAP_CORRESPONDENT_RECIPIENT_NAME_1",
+              "value": "test-business-solutions@elo.local",
+              "type": "TEXT"
+            },
+            {
+              "selector": "IX_GRP_COMMUNICATION_SUBJECT",
+              "value": "Geschäftsnachricht",
+              "type": "TEXT"
+            },
+            {
+              "selector": "",
+              "value": "Inhalt Geschäftsnachricht",
+              "type": "REDACTOR"
+            }
+          ],
+          "tables": [],
+          "checkValueControls": [],
+          "selectDocumentDialogs": [
+            {
+              "startButton": "Anhang hinzufügen",
+              "documentPath": "Solutions/PDF Export/bob ipsum PDF"
+            }
+          ]
+        }
+      ],
+      "testShouldFail": false,
+      "selectedButton": "SAVE"
+    },
+    {
+      "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans/Korrespondenz/Geschäftsnachricht",
+      "formulaType": "VIEWER",
+      "formulaSaveButton": "",
+      "formulaCancelButton": "",
+      "selectionDialogItem": "",
+      "eloActionDef": {
+        "selectorRibbon": "",
+        "selectorMenu": "",
+        "selectorButton": ""
+      },
+      "tabPages": [
+        {
+          "tabName": "",
+          "initTabPage": [],
+          "controls": [],
+          "tables": [],
+          "checkValueControls": [],
+          "selectDocumentDialogs": []
+        }
+      ],
+      "testShouldFail": false,
+      "selectedButton": "SAVE"
+    }
+  ],
+  "eloTasks": [],
+  "eloDeletes": [],
   "eloForwardWorkflow": {
     "toNodesName": []
   },
-  "eloRfs": {
-    "eloRfs": []
-  }
+  "eloRfs": []
 }
