--- a/Playwright/DataConfigStartOnBoarding.json
+++ b/Playwright/DataConfigStartOnBoarding.json
@@ -17,96 +17,87 @@
     },
     "stack": "ruberg-hr.dev.elo"
   },
-  "eloAcls": {
-    "arcPaths": [
-      "ARCPATH:/Administration/Business Solutions/_global/Action definitions/sol.hr.personnel.StartOnboarding"
-    ]
-  },
+  "eloAcls": [
+    "ARCPATH:/Administration/Business Solutions/_global/Action definitions/sol.hr.personnel.StartOnboarding"
+  ],
   "eloTile": {
     "repositoryTile": "Solutions",
     "taskTile": "Aufgaben"
   },
-  "eloActions": {
-    "eloActions": [
-      {
-        "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans",
-        "formulaType": "EXTERNAL",
-        "formulaSaveButton": "OK",
-        "formulaCancelButton": "Abbrechen",
-        "selectionDialogItem": "",
-        "eloActionDef": {
-          "selectorRibbon": "Personal",
-          "selectorMenu": "Personal",
-          "selectorButton": "Eintrittsprozess"
-        },
-        "tabPages": [
-          {
-            "tabName": "",
-            "initTabPage": [],
-            "controls": [
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_SUPERIOR",
-                "value": "Gerd Baum",
-                "type": "DYNKWL"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_JOBTITLE",
-                "value": "Consultant",
-                "type": "TEXT"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_COMPANY",
-                "value": "Contelo AG",
-                "type": "TEXT"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_DIVISION",
-                "value": "Projekte \u0026 Services",
-                "type": "TEXT"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_DEPARTMENT",
-                "value": "Consulting",
-                "type": "TEXT"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_TEAM",
-                "value": "",
-                "type": "TEXT"
-              },
-              {
-                "selector": "IX_GRP_HR_PERSONNEL_DATEOFJOINING",
-                "value": "#nowdate#",
-                "type": "TEXT"
-              }
-            ],
-            "tables": [],
-            "checkValueControls": [],
-            "selectDocumentDialogs": []
-          }
-        ],
-        "testShouldFail": false
-      }
-    ]
-  },
-  "eloTasks": {
-    "eloTasks": []
-  },
-  "eloDeletes": {
-    "arcPaths": []
-  },
+  "eloActions": [
+    {
+      "entryPath": "Solutions/Personalmanagement/Personalakten/H/Hansen, Hans",
+      "formulaType": "EXTERNAL",
+      "formulaSaveButton": "OK",
+      "formulaCancelButton": "Abbrechen",
+      "selectionDialogItem": "",
+      "eloActionDef": {
+        "selectorRibbon": "Personal",
+        "selectorMenu": "Personal",
+        "selectorButton": "Eintrittsprozess"
+      },
+      "tabPages": [
+        {
+          "tabName": "",
+          "initTabPage": [],
+          "controls": [
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_SUPERIOR",
+              "value": "Gerd Baum",
+              "type": "DYNKWL"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_JOBTITLE",
+              "value": "Consultant",
+              "type": "TEXT"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_COMPANY",
+              "value": "Contelo AG",
+              "type": "TEXT"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_DIVISION",
+              "value": "Projekte \u0026 Services",
+              "type": "TEXT"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_DEPARTMENT",
+              "value": "Consulting",
+              "type": "TEXT"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_TEAM",
+              "value": "",
+              "type": "TEXT"
+            },
+            {
+              "selector": "IX_GRP_HR_PERSONNEL_DATEOFJOINING",
+              "value": "#nowdate#",
+              "type": "TEXT"
+            }
+          ],
+          "tables": [],
+          "checkValueControls": [],
+          "selectDocumentDialogs": []
+        }
+      ],
+      "testShouldFail": false,
+      "selectedButton": "SAVE"
+    }
+  ],
+  "eloTasks": [],
+  "eloDeletes": [],
   "eloForwardWorkflow": {
     "toNodesName": [
       "sol.common.wf.node.ok",
       "sol.common.wf.node.approve"
     ]
   },
-  "eloRfs": {
-    "eloRfs": [
-      {
-        "funcName": "RF_sol_common_service_ExecuteAsAction",
-        "jsonParam": "{ \"action\": \"sol.hr.PersonnelFileReminder\", \"config\": {} }"
-      }
-    ]
-  }
+  "eloRfs": [
+    {
+      "funcName": "RF_sol_common_service_ExecuteAsAction",
+      "jsonParam": "{ \"action\": \"sol.hr.PersonnelFileReminder\", \"config\": {} }"
+    }
+  ]
 }
