Playwright/JiraScriptFunctions.txt

--- a/Playwright/JiraConnectionConfig.json
+++ b/Playwright/JiraConnectionConfig.json
@@ -3,7 +3,7 @@
   "username": "J-H.Ruberg@elo.com",
   "password": "XXX",
   "testExecutionKey": "QBSHR-66",
-  "eloStack": "ruberg-hr.dev.elo",
+  "eloStack": "playground.dev.elo",
   "eloTile": {
     "repositoryTile": "Solutions",
     "taskTile": "Aufgaben"
